# distributed-lab-challenge

./: Cargo.toml  README.md
backpack/: Cargo.toml  README.md
backpack/data/: test.csv
backpack/src/: lib.rs  main.rs
hilter-crawler/: .gitignore  Cargo.toml  README.md  rust-toolchain  shell.nix
hilter-crawler/src/: lib.rs  main.rs
long-arithmetic/: Cargo.toml  README.md
long-arithmetic/src/: bigint.rs  biguint.rs  boilerplate.rs  cmp.rs  convert.rs  helpers.rs  karatsuba.rs  lib.rs
maze/: Cargo.toml  README.md
maze/src/: lib.rs  main.rs
orderbook/: Cargo.toml  README.md
orderbook/data/: test.txt
orderbook/src/: lib.rs  main.rs
piniatas/: Cargo.toml  README.md
piniatas/data/: test.txt
piniatas/src/: lib.rs  main.rs
students-capital/: Cargo.toml  README.md
students-capital/data/: test.txt
students-capital/src/: lib.rs  main.rs
utxo-chain/: Cargo.toml  README.md
utxo-chain/src/: lib.rs  main.rs
website-analytics/: Cargo.toml  README.md
website-analytics/data/: day1.csv  day2.csv
website-analytics/src/: main.rs
